jenkins/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: renda-fixa
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
